인터페이스화

--- a/OpenGlSample/OpenGlSample.vcxproj.filters
+++ b/OpenGlSample/OpenGlSample.vcxproj.filters
@@ -792,6 +792,12 @@
     <ClInclude Include="NonRenderableObject.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="IRenderer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="IUpdater.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="glm\detail\func_common.inl">
