--- a/OpenGlSample/OpenGlSample.vcxproj
+++ b/OpenGlSample/OpenGlSample.vcxproj
@@ -367,6 +367,8 @@
     <ClInclude Include="include\GL\glew.h" />
     <ClInclude Include="include\GL\glxew.h" />
     <ClInclude Include="include\GL\wglew.h" />
+    <ClInclude Include="IRenderer.h" />
+    <ClInclude Include="IUpdater.h" />
     <ClInclude Include="NonRenderableObject.h" />
     <ClInclude Include="objdata.h" />
     <ClInclude Include="Object.h" />
