keyboard input inside do while
키보드 입력 및 간단한 게임 동작을 do while 문 안에 작성 하였습니다.

--- a/OpenGlSample/OpenGlSample.vcxproj
+++ b/OpenGlSample/OpenGlSample.vcxproj
@@ -514,6 +514,8 @@
     <None Include="glm\gtx\vector_angle.inl" />
     <None Include="glm\gtx\vector_query.inl" />
     <None Include="glm\gtx\wrap.inl" />
+    <None Include="TextVertexShader.fragmentshader" />
+    <None Include="TextVertexShader.vertexshader" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FileManager.cpp" />
