--- a/OpenGlSample/OpenGlSample.vcxproj.filters
+++ b/OpenGlSample/OpenGlSample.vcxproj.filters
@@ -1204,6 +1204,8 @@
     </None>
     <None Include="20161364_fs.shader" />
     <None Include="20161364_vs.shader" />
+    <None Include="TextVertexShader.vertexshader" />
+    <None Include="TextVertexShader.fragmentshader" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
