--- a/OpenGlSample/OpenGlSample.vcxproj.filters
+++ b/OpenGlSample/OpenGlSample.vcxproj.filters
@@ -801,6 +801,9 @@
     <ClInclude Include="IU.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Time.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="glm\detail\func_common.inl">
@@ -1239,5 +1242,13 @@
     <ClCompile Include="gamecontroller.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Time.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="C:\Users\Kim\Desktop\AA.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
