구조 조정 및 ObjectUpdater
 template을 적용 시키기 위한 기초적인 구조를 만들었습니다.
ObjectUpdater를 통해 template의 Update를 사용할 수 있습니다.

--- a/OpenGlSample/OpenGlSample.vcxproj.filters
+++ b/OpenGlSample/OpenGlSample.vcxproj.filters
@@ -804,6 +804,18 @@
     <ClInclude Include="Time.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectUpdater.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectInit.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="IInit.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectRenderer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="glm\detail\func_common.inl">
