--- a/OpenGlSample/OpenGlSample.vcxproj
+++ b/OpenGlSample/OpenGlSample.vcxproj
@@ -362,6 +362,7 @@
     <ClInclude Include="glm\vec4.hpp" />
     <ClInclude Include="glm\vector_relational.hpp" />
     <ClInclude Include="ICleanUp.h" />
+    <ClInclude Include="IInit.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
     <ClInclude Include="include\GLFW\glfw3native.h" />
     <ClInclude Include="include\GL\eglew.h" />
@@ -373,6 +374,9 @@
     <ClInclude Include="NonRenderableObject.h" />
     <ClInclude Include="objdata.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="ObjectInit.h" />
+    <ClInclude Include="ObjectRenderer.h" />
+    <ClInclude Include="ObjectUpdater.h" />
     <ClInclude Include="RenderableObject.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="setwindow.h" />
