--- a/OpenGlSample/OpenGlSample.vcxproj.filters
+++ b/OpenGlSample/OpenGlSample.vcxproj.filters
@@ -816,6 +816,12 @@
     <ClInclude Include="ObjectRenderer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectDelete.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="testnonrender.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="glm\detail\func_common.inl">
