--- a/OpenGlSample/OpenGlSample.vcxproj.filters
+++ b/OpenGlSample/OpenGlSample.vcxproj.filters
@@ -822,6 +822,9 @@
     <ClInclude Include="testnonrender.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CompositeObj.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="glm\detail\func_common.inl">
