파일 위치 변경

--- a/OpenGlSample/OpenGlSample.vcxproj
+++ b/OpenGlSample/OpenGlSample.vcxproj
@@ -362,16 +362,16 @@
     <ClInclude Include="glm\vec3.hpp" />
     <ClInclude Include="glm\vec4.hpp" />
     <ClInclude Include="glm\vector_relational.hpp" />
-    <ClInclude Include="ICleanUp.h" />
-    <ClInclude Include="IInit.h" />
     <ClInclude Include="include\GLFW\glfw3.h" />
     <ClInclude Include="include\GLFW\glfw3native.h" />
     <ClInclude Include="include\GL\eglew.h" />
     <ClInclude Include="include\GL\glew.h" />
     <ClInclude Include="include\GL\glxew.h" />
     <ClInclude Include="include\GL\wglew.h" />
-    <ClInclude Include="IRenderer.h" />
-    <ClInclude Include="IU.h" />
+    <ClInclude Include="interface\ICleanUp.h" />
+    <ClInclude Include="interface\IInit.h" />
+    <ClInclude Include="interface\IRenderer.h" />
+    <ClInclude Include="interface\IU.h" />
     <ClInclude Include="NonRenderableObject.h" />
     <ClInclude Include="objdata.h" />
     <ClInclude Include="Object.h" />
